@@ -1,3 +1,8 @@
+2002-08-02  Theodore A. Roth  <troth@verinet.com>
+
+	* doc/api/Makefile.am(clean-local): Added man dir for cleanup.
+	* doc/api/Makefile.am: Fixed circular dependancy for dox-html <-> html.
+
 2002-07-31  Theodore A. Roth  <troth@verinet.com>
 
 	* crt1/gcrt1.S: Allow gcc versions >= 3.2.
